Use a deprecated property to fix the scrollbar positioning problem

--- a/DidacticalEnigma.Next/wwwroot/index.css
+++ b/DidacticalEnigma.Next/wwwroot/index.css
@@ -142,7 +142,7 @@ body {
     border-width: 2px;
     border-color: #777;
     z-index: 1;
-    overflow-y: scroll;
+    overflow-y: overlay;
     overflow-wrap: anywhere;
 }
 input {
